Fix issue with reply going out of screen in mobile

--- a/src/components/comments/helpers/index.module.sass
+++ b/src/components/comments/helpers/index.module.sass
@@ -1,7 +1,7 @@
 @import 'src/styles/subsocial-vars.scss'
 
 .BumbleContent
-  display: inline-block
+  display: block
   margin-top: $space_tiny !important
   padding: $space_small $space_normal
   border-radius: 15px
